# CoM

./: CMakeLists.txt  Seg.cpp  Seg.h  VisualHull.cpp  VisualHull.h  cameraLay.cpp  cameraLay.h  main.cpp
